# endless-afternoon

./: .clang-format  .clangd  CMakeLists.txt  beat.strudel  compile_flags.txt
include/: arena_manager.h  custom_draws.h  danger_effects.h  entity.h  grid_manager.h  keybinds.h  keybinds.hpp  raygui.h  renderer.h  resource_loader.h  scene.h  scene_manager.h  screen_shake.h  utils.h
include/entities/: clockhand.h  enemy.h  entity.h  player.h
src/: main.cpp
src/engine/: arena_manager.cpp  custom_draws.cpp  danger_effects.cpp  grid_manager.cpp  renderer.cpp  resource_loader.cpp  screen_shake.cpp  utils.cpp
src/entities/: e_clockhand.cpp  e_enemy.cpp  e_enemy_attacks.cpp  e_enemy_draw.cpp  e_player.cpp
src/scenes/: s_0_scene_manager.cpp  s_1_mainmenu.cpp  s_2_cutscene.cpp  s_3_playmode.cpp  s_4_victory.cpp  s_5_gameover.cpp  s_cutscene.cpp  s_mainmenu.cpp  s_playmode.cpp  s_result_screens.cpp
